--- a/.env.firebaseOptions
+++ b/.env.firebaseOptions
@@ -1,1 +1,14 @@
-ENV_TYPE="prod"
+WEB_WINDOWS_API_KEY='AIzaSyCfbZcnDOZ_ZPTIaVXWYAmlyZZQ05_fBE8'
+WEB_APP_ID='1:961115936061:web:cae5af827f097aa7f62154'
+MESSAGING_SENDER_ID='961115936061'
+PROJECT_ID='shoply-6e93b'
+AUTH_DOMAIN='shoply-6e93b.firebaseapp.com'
+STORAGE_BUCKET='shoply-6e93b.appspot.com'
+MEASUREMENT_ID='G-SDCV3PEF5R'
+ANDROID_API_KEY='AIzaSyDxE5FrvTLHYl0aWXNnYRhyrtzvU4wIExA'
+ANDROID_APP_ID='1:961115936061:android:9565cf7e9f368acbf62154'
+IOS_MACOS_API_KEY='AIzaSyALQ-ulNIxnvztHgzc6iMdahzlfGyggIDo'
+IOS_MACOS_APP_ID='1:961115936061:ios:825907a0ab7343a2f6215'4
+IOS_MACOS_BUNDLE_ID='com.marcosoft.shoply'
+WINDOWS_APP_ID='1:961115936061:web:3024f7e6b70f3174f62154'
+WINDOWS_MEASUREMENT_ID='G-3CMDY7TCK1'
