--- a/.gitignore
+++ b/.gitignore
@@ -41,8 +41,9 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
-
+/android/app/google-services.json
 #.env variables
 .env.prod
 .env.dev
 .env.firebase
+firebase.json
