--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,8 +45,12 @@ dependencies:
   flutter_lints: ^4.0.0
   cupertino_icons: ^1.0.8
   flutter_native_splash: ^2.4.0
-  flutter_svg: ^2.0.10+1
   google_fonts: ^6.2.1
+
+  #UI
+  flutter_svg: ^2.0.10+1
+#  flutter_animated_icons: ^1.0.1
+  lottie: ^3.1.2
 
 
 dev_dependencies:
@@ -78,6 +82,7 @@ flutter:
     - .env.prod
     - .env.firebase
     - assets/images/core/
+    - assets/images/json/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
