--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,13 +43,17 @@ dependencies:
   flutter_screenutil: ^5.9.3
   flutter_launcher_icons: ^0.13.1
   flutter_lints: ^4.0.0
-  cupertino_icons: ^1.0.8
   flutter_native_splash: ^2.4.0
   google_fonts: ^6.2.1
+  flutter_translate: ^4.1.0
+
+  #language
+  flutter_localizations:
+    sdk: flutter
+  cupertino_icons: ^1.0.8
 
   #UI
   flutter_svg: ^2.0.10+1
-#  flutter_animated_icons: ^1.0.1
   lottie: ^3.1.2
 
 
@@ -83,29 +87,26 @@ flutter:
     - .env.firebase
     - assets/images/core/
     - assets/images/json/
+    - translations/ar.json
+    - translations/en.json
 
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware
+  fonts:
+    # Arabic Font
+    - family: Cairo
+      fonts:
+        - asset: assets/fonts/arabic/cairo/Cairo-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/arabic/cairo/Cairo-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/arabic/cairo/Cairo-Regular.ttf
+          weight: 400
+    # English Font
+    - family: Poppins
+      fonts:
+        - asset: assets/fonts/english/poppins/Poppins-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/english/poppins/Poppins-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/english/poppins/Poppins-Regular.ttf
+          weight: 400
 
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
