--- a/splash.yaml
+++ b/splash.yaml
@@ -17,9 +17,9 @@ flutter_native_splash:
   # Following are specific parameters for Android 12+.
 
   android_12:
-    image: assets/images/core/launcher_foreground.png
 #    background_image: assets/images/core/launcher_background.png
-    color: "#8FD9FF"
+    image: assets/images/core/splash.png
+#    color: "#8FD9FF"
     color_dark: "#2b3361"
     android_gravity: center
 
