--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_native_splash: ^2.4.0
   google_fonts: ^6.2.1
   flutter_translate: ^4.1.0
+  get_it: ^7.7.0
 
   #language
   flutter_localizations:
@@ -58,12 +59,26 @@ dependencies:
   animate_do: ^3.3.4
   animations: ^2.0.11
 
+  # bloc
+  flutter_bloc: ^8.1.6
+  bloc: ^8.1.4
+
+#  Shared Preferences
+  shared_preferences: ^2.2.3
+#  freezed:
+  freezed: ^2.5.2
+  freezed_annotation: ^2.4.1
+
+  #local storage
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_launcher_icons: ^0.13.1
   very_good_analysis: ^5.1.0
+  build_runner: ^2.4.11
+
+
 flutter_launcher_icons:
   android: true
   ios: true
