--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,8 @@ dependencies:
   lottie: ^3.1.2
   animate_do: ^3.3.4
   animations: ^2.0.11
+  oktoast: ^3.4.0
+  awesome_snackbar_content: ^0.1.3
 
   # bloc
   flutter_bloc: ^8.1.6
