--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,13 @@ dependencies:
   oktoast: ^3.4.0
   awesome_snackbar_content: ^0.1.3
 
+#  Image Picker
+  image_picker: ^1.1.2
+  image_cropper: ^7.0.5
+  permission_handler: ^11.3.1
+  photo_view: ^0.15.0
+  card_swiper: ^3.0.1
+
   # bloc
   flutter_bloc: ^8.1.6
   bloc: ^8.1.4
