--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -53,6 +53,19 @@ android {
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
+    flavorDimensions "default"
+
+    productFlavors {
+        development {
+            dimension "default"
+            resValue "string", "app_name", "Shoply Developement"
+            applicationIdSuffix ".dev"
+        }
+        production {
+            dimension "default"
+            resValue "string", "app_name", "Shoply"
+        }
+    }
 
     buildTypes {
         release {
