Android Fastlane with Firebase App Distribution Workflow
- secured ANDROID_APP_ID and FIREBASE_CLI_TOKEN with github-actions
- added Android Fastlane with Firebase App Distribution Workflow
- Bumped version to 1.0.1

--- a/.github/workFlows/android_fastlane_firebase_app_distribution_workflow.yaml
+++ b/.github/workFlows/android_fastlane_firebase_app_distribution_workflow.yaml
@@ -2,7 +2,7 @@ name: Android Fastlane with Firebase App Distribution Workflow
 on:
   push:
     branches:
-      - development
+      - master
 jobs:
     distribute_to_firebase:
       runs-on: ubuntu-latest
