--- a/.github/workflows/android_fastlane_firebase_app_distribution_workflow.yaml
+++ b/.github/workflows/android_fastlane_firebase_app_distribution_workflow.yaml
@@ -25,6 +25,7 @@ jobs:
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: '3.2.3'
+          architecture: 'x86_64-linux'
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
           working-directory: android
 
