--- a/.github/workflows/android_fastlane_firebase_app_distribution_workflow.yaml
+++ b/.github/workflows/android_fastlane_firebase_app_distribution_workflow.yaml
@@ -30,8 +30,8 @@ jobs:
 
       - name: Build and Distribute App
         env:
-          FIREBASE_CLI_TOKEN: ${{ secrets.FIREBASE_CLI_TOKEN }}
+          FIREBASE_CLI_TOKEN: ${{secrets.FIREBASE_CLI_TOKEN}}
 
         run:
-          bundle exec fastlane android firebase_distribution
+          bundle exec fastlane firebase_distribution
         working-directory: android
