--- a/.github/workflows/android_fastlane_firebase_app_distribution_workflow.yaml
+++ b/.github/workflows/android_fastlane_firebase_app_distribution_workflow.yaml
@@ -10,10 +10,10 @@ jobs:
       - name: checkout my repo code,
         uses: actions/checkout@v2
 
-      - name: Setup JDK 11
+      - name: Setup JDK 21
         uses: actions/setup-java@v2
         with:
-          java-version: '17'
+          java-version: '21'
           distribution: 'zulu'
 
       - name: Install Flutter
@@ -21,13 +21,13 @@ jobs:
         with:
           channel: 'stable'
 
-      - name: Setup Ruby
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: '3.2.0'
-          bundler-cache: true # runs 'bundle install' and caches installed gems automatically
-          working-directory: android
-      - run: flutter pub get
+      # - name: Setup Ruby
+      #   uses: ruby/setup-ruby@v1
+      #   with:
+      #     ruby-version: '3.2.0'
+      #     bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+      #     working-directory: android
+      - run: flutter clean
       - run: flutter build apk --release --flavor production -t lib/main_production.dart --no-tree-shake-icons
       - uses: actions/upload-artifact@v1
         with:
