--- a/.github/workflows/android_fastlane_firebase_app_distribution_workflow.yaml
+++ b/.github/workflows/android_fastlane_firebase_app_distribution_workflow.yaml
@@ -10,10 +10,10 @@ jobs:
       - name: checkout my repo code,
         uses: actions/checkout@v2
 
-      - name: Setup JDK 21
+      - name: Setup JDK 17
         uses: actions/setup-java@v2
         with:
-          java-version: '21'
+          java-version: '17.0.10+0--11609105'
           distribution: 'zulu'
 
       - name: Install Flutter
