--- a/.github/workflows/android_fastlane_firebase_app_distribution_workflow.yaml
+++ b/.github/workflows/android_fastlane_firebase_app_distribution_workflow.yaml
@@ -13,7 +13,7 @@ jobs:
       - name: Setup JDK 17
         uses: actions/setup-java@v2
         with:
-          java-version: '17.0.10+0--11609105'
+          java-version: '17'
           distribution: 'zulu'
 
       - name: Install Flutter
