--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   oktoast: ^3.4.0
   awesome_snackbar_content: ^0.1.3
   font_awesome_flutter: ^10.7.0
+  flutter_zoom_drawer: ^3.2.0
 
 #  Image Picker
   image_picker: ^1.1.2
