--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,8 @@ dependencies:
   permission_handler: ^11.3.1
   photo_view: ^0.15.0
   card_swiper: ^3.0.1
+  path_provider: ^2.1.3
+
 
   # bloc
   flutter_bloc: ^8.1.6
