--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   google_fonts: ^6.2.1
   flutter_translate: ^4.1.0
   get_it: ^7.7.0
+  package_info_plus: ^8.0.2
 
   #language
   flutter_localizations:
@@ -77,6 +78,8 @@ dependencies:
   flutter_swipe_action_cell: ^3.1.3
   vibration: ^1.9.0
   cached_network_image: ^3.3.1
+  webview_flutter: ^4.8.0
+  url_launcher: ^6.3.0
 
 
   #  Image Picker
