--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   flutter_translate: ^4.1.0
   get_it: ^7.7.0
   package_info_plus: ^8.0.2
+  equatable: ^2.0.5
 
   #language
   flutter_localizations:
