update kotlin version to solve git hub action

--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -25,5 +25,12 @@ plugins {
     // END: FlutterFire Configuration
     id "org.jetbrains.kotlin.android" version "2.1.0" apply false
 }
+dependencyResolutionManagement {
+    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    repositories {
+        google()
+        mavenCentral()
+    }
+}
 
 include ":app"
