--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,5 @@
+import kotlin.KotlinVersion
+
 buildscript {
     ext.kotlin_version = '1.9.10' // Update to the latest version
     repositories {
@@ -5,7 +7,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.10"
     }
 }
 
